--- a/style.css
+++ b/style.css
@@ -17,10 +17,14 @@
 		background-color: #2c2b2b;
 
 		padding: 20px;
+
 		.textSection__numbers {
+			min-width: 100%;
 			height: 10dvh;
 			background-color: rgb(165, 148, 148);
+			text-align: end;
 		}
+
 		.buttonSection {
 			padding: 10px 0px;
 			display: grid;
