--- a/style.css
+++ b/style.css
@@ -19,10 +19,12 @@
 		padding: 20px;
 
 		.textSection__numbers {
-			min-width: 100%;
-			height: 10dvh;
+			height: 13dvh;
 			background-color: rgb(165, 148, 148);
 			text-align: end;
+			font-size: 4rem;
+			overflow: hidden;
+			width: 255px;
 		}
 
 		.buttonSection {
